added bullet points to Educations

--- a/HTML/MY PROFILE.html
+++ b/HTML/MY PROFILE.html
@@ -7,16 +7,7 @@
         <link rel="stylesheet" href="../CSS/Style PROFILE.css">
     </head>
     <body>
-        <a href="https://www.google.com/search?q=Challapalli+Sri+Tejaswi+Ganesh&oq=Challapalli+Sri+Tejaswi+Ganesh&aqs=chrome..69i57j69i60l3.10119j1j15&sourceid=chrome&ie=UTF-8" target="_blank">
-            <img   
-                src="../Images/My DP edited.jpg" 
-                alt="My DP is not That Good"
-                title="Click Here to Open a Google Search on my name"
-                height=15%
-                width=15% 
-                class="make_center" 
-            >
-        </a>
+        <img src="../Images/My DP edited.jpg" alt="My DP is not That Good" height=15% width=15%>
         <h1 class="name">Challapalli Sri Tejaswi Ganesh</h1>
         <h4 class="subtitle">(currently a Sophomore in Mechanical Engineering At NIT Rourkela)</h4>
 
@@ -24,9 +15,17 @@
 
         <h2 class="headings">Education</h2>
         <p>
-            2021-2025 &emsp; : National Institute Of Technology Rourkela <br>
-            2019-2021 &emsp; : FIITJEE, Visakhapatnam <br>
-            2007-2019 &emsp; : Visakha Valley School, Visakhapatnam <br>
+            <ul>
+                <li>
+                    2021-2025 &emsp; : National Institute Of Technology Rourkela <br>
+                </li>
+                <li>
+                    2019-2021 &emsp; : FIITJEE, Visakhapatnam <br>
+                </li>
+                <li>
+                    2007-2019 &emsp; : Visakha Valley School, Visakhapatnam <br>
+                </li>
+            </ul>
         </p>
 
         <hr>
@@ -40,7 +39,7 @@
 
         <p>
             Here is My 
-            <a href="/WEB DEV/HTML/My Contact.html" target="_blank">Contact Info</a>
+            <a href="My Contact.html" target="_blank">Contact Info</a>
         </p>
     </body>
 </html>
